--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -1,5 +1,6 @@
 <% content_for :title, "ゲームに参加する | VocaBoom!" %>
 
+<div class="edit-page-container">
 <h1 class="word-kit-index">ゲームに参加する</h1>
 
   <div class="edit-card-body">
