--- a/app/views/word_kits/edit.html.erb
+++ b/app/views/word_kits/edit.html.erb
@@ -1,5 +1,7 @@
+<% content_for :title, "ゲームキット編集 | VocaBoom!" %>
+
 <div class="edit-page-container">
-  <h1 class="word-kit-index">キット編集</h1>
+  <h1 class="word-kit-index">ゲームキット編集</h1>
 
   <div class="edit-card-body" data-controller="nested-cards">
     <%= form_with model: @word_kit, local: true do |f| %>
