FIX:ゲーム終了ボタンを押しても戻らない問題の改善

--- a/app/views/game_rooms/start.html.erb
+++ b/app/views/game_rooms/start.html.erb
@@ -1,33 +1,31 @@
 <% content_for :title, "ゲームを開く | VocaBoom!" %>
 
-<div id="game_play" class="play-container" data-room-id="<%= @game_room.id %>">
+<div id="game_play" class="play-container" 
+     data-room-id="<%= @game_room.id %>"
+     data-controller="timer"
+     data-timer-time-limit-value="<%= @game_room.time_limit %>"
+     data-timer-started-at-value="<%= @game_room.started_at.iso8601 if @game_room.started_at %>"
+     data-timer-game-room-id-value="<%= @game_room.id %>" 
+     data-timer-is-host-value="true"
+     data-timer-participant-id-value="<%= @participant&.id || 0 %>">
   
   <div class="code-badge">
     ゲームコード: <span><%= @game_room.game_code %></span>
   </div>
 
   <div class="timer-section">
-      <h2 class="timer-label">残り時間</h2>
-      <p 
-        id="timer"
-        class="timer-display"
-        data-controller="timer"
-        data-timer-target="display"
-        data-timer-time-limit-value="<%= @game_room.time_limit %>"
-        data-timer-started-at-value="<%= @game_room.started_at.iso8601 if @game_room.started_at %>"
-        data-timer-game-room-id-value="<%= @game_room.id %>" 
-        data-timer-is-host-value="true"
-        data-timer-participant-id-value="<%= @participant&.id || 0 %>"
-      >
-        --:--
-      </p>
-    </div>
-
-    <div class="action-section">
-      <%= button_to "ゲーム終了!", finish_game_room_game_play_path(@game_room), 
-          method: :patch, 
-          class: "finish-button",
-          data: { turbo_confirm: "本当に終了しますか？" } %>
-    </div>
+    <h2 class="timer-label">残り時間</h2>
+    <p id="timer" class="timer-display" data-timer-target="display">
+      --:--
+    </p>
   </div>
+
+  <div class="action-section">
+    <button type="button" 
+            class="finish-button" 
+            data-action="click->timer#confirmFinish">
+      ゲーム終了!
+    </button>
+  </div>
+
 </div>
