--- a/app/views/game_plays/overall_result.html.erb
+++ b/app/views/game_plays/overall_result.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "結果発表 | VocaBoom!" %>
+<% content_for :title, "結果発表 | Vocano!" %>
 
 <div class="result-container">
   <h1 class="result-title">🏆 結果発表 🏆</h1>
