--- a/app/views/game_rooms/start.html.erb
+++ b/app/views/game_rooms/start.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "ゲームを開く | VocaBoom!" %>
+<% content_for :title, "ゲームを開く | Vocano!" %>
 
 <div id="game_play" class="play-container" 
      data-room-id="<%= @game_room.id %>"
