--- a/app/views/game_rooms/waiting.html.erb
+++ b/app/views/game_rooms/waiting.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "ゲームに参加する | VocaBoom!" %>
+<% content_for :title, "ゲームに参加する | Vocano!" %>
 
 <div class="lobby-container" id='game_waiting' data-room-id="<%= @game_room.id %>">
   <div class="edit-card-body">
