--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "ゲームに参加する | VocaBoom!" %>
+<% content_for :title, "ゲームに参加する | Vocano!" %>
 
 <div class="edit-page-container">
 <h1 class="word-kit-index">ゲームに参加する</h1>
