--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <%= link_to root_path, class: "site-logo" do %>
-    <%= image_tag "vocaboom_site_logo.png", alt: "VocaBoom!" %>
+    <%= image_tag "vocano_site_logo.png", alt: "Vocano!" %>
   <% end %>
 
   <div class='menu_group'>
