--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "新規登録 | VocaBoom!" %>
+<% content_for :title, "新規登録 | Vocano!" %>
 
 <div class="auth-container">
   <div class="auth-card">
