--- a/app/views/word_kits/edit.html.erb
+++ b/app/views/word_kits/edit.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "ゲームキット編集 | VocaBoom!" %>
+<% content_for :title, "ゲームキット編集 | Vocano!" %>
 
 <div class="edit-page-container">
   <h1 class="word-kit-index">ゲームキット編集</h1>
