--- a/app/views/word_kits/index.html.erb
+++ b/app/views/word_kits/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "ゲームキット一覧| VocaBoom!" %>
+<% content_for :title, "ゲームキット一覧| Vocano!" %>
 
 <h1 class="word-kit-index">ゲームキット一覧</h1>
 
