--- a/app/views/word_kits/new.html.erb
+++ b/app/views/word_kits/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "ゲームキット新規作成 | VocaBoom!" %>
+<% content_for :title, "ゲームキット新規作成 | Vocano!" %>
 
 <div class="edit-page-container">
   <h1 class="word-kit-index">新規キット作成</h1>
