--- a/app/views/word_kits/show.html.erb
+++ b/app/views/word_kits/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "ゲームキット詳細 | VocaBoom!" %>
+<% content_for :title, "ゲームキット詳細 | Vocano!" %>
 
 <div class="edit-page-container">
   <div class="edit-card-body">
