--- a/app/assets/stylesheets/game_play.css
+++ b/app/assets/stylesheets/game_play.css
@@ -168,6 +168,7 @@
 
 .result-container {
   padding-top: 120px;
+  margin-top: -50px;
   text-align: center;
   font-family: 'Zen Maru Gothic', sans-serif;
   padding-bottom: 40px;
