--- a/app/assets/stylesheets/top_page.css
+++ b/app/assets/stylesheets/top_page.css
@@ -37,11 +37,13 @@ header {
 .site-logo {
   display: flex;
   align-items: center;
-  margin-left: -30px;
+  margin-left: -20px;
+  filter: drop-shadow(0 8px 15px rgba(0, 0, 0, 0.15)) 
+          drop-shadow(0 4px 4px rgba(0, 0, 0, 0.1));
 }
 
 .site-logo img {
-  height: 60px;
+  height: 300px;
   width: auto;
   transition: transform 0.2s;
 }
@@ -89,10 +91,12 @@ header {
   display: block;
   width: 100%; 
   max-width: 1000px; 
-  height: auto;
-  margin: -80px auto 20px; 
+  height: 90%;
+  margin: -100px auto -120px; 
   transform: translateY(-20px); 
   object-fit: contain;
+  filter: drop-shadow(0 8px 15px rgba(0, 0, 0, 0.15)) 
+          drop-shadow(0 4px 4px rgba(0, 0, 0, 0.1));
 }
 
 .main-buttons {
@@ -101,7 +105,7 @@ header {
   gap: 24px;
   list-style: none;
   margin: 0 auto;
-  transform: translateY(-150px);
+  transform: translateY(-60px);
   padding: 0;
   position: relative;
   z-index: 10;
