--- a/app/views/game_plays/show.html.erb
+++ b/app/views/game_plays/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "ゲームに参加する | VocaBoom!" %>
+<% content_for :title, "ゲームに参加する | Vocano!" %>
 
 <% content_for :head do %>
   <meta name="turbo-cache-control" content="no-cache">
