--- a/app/views/game_rooms/show.html.erb
+++ b/app/views/game_rooms/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "ゲームを開く | VocaBoom!" %>
+<% content_for :title, "ゲームを開く | Vocano!" %>
 
 <div id="game-room-data" data-game-room-id="<%= @game_room.id %>"></div>
 
