--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "トップページ | VocaBoom!" %>
+<% content_for :title, "トップページ | Vocano!" %>
 
-<%= image_tag "title_logo.png", alt: "VocaBoom!", class: "title-logo"%>
+<%= image_tag "vocano_title_logo.png", alt: "Vocano!", class: "title-logo"%>
   <ul class="main-buttons">
     <li>
       <%= link_to 'ゲームを開く', word_kits_path, class: "main-button" %>
