--- a/app/assets/stylesheets/top_page.css
+++ b/app/assets/stylesheets/top_page.css
@@ -6,7 +6,7 @@ html, body {
 
 body {
   min-height: 100vh;
-  background-image: url("/assets/background.png");
+  background-image: asset-url("background.png");
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
