--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,12 +8,12 @@
       
       <div class="input-group">
         <%= f.label :name, "ニックネーム" %>
-        <%= f.text_field :name, placeholder: "ボカブームくん" %>
+        <%= f.text_field :name, placeholder: "ボカノ" %>
       </div>
 
       <div class="input-group">
         <%= f.label :email, "メールアドレス" %>
-        <%= f.email_field :email, placeholder: "example@vocaboom.com" %>
+        <%= f.email_field :email, placeholder: "example@vocano.com" %>
       </div>
       
       <div class="input-group">
