--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,39 +10,12 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
  */
 
- /*
- *= require signup
- *= require top_page
-*/
-
-.hidden { display: none; }
-
-.modal-content {
-  background: white;
-  border: 1px solid black;
-  padding: 20px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 9999;
-}
-
-.main-button.small {
-  padding: 12px 20px;
-  font-size: 14px;
-}
-
-.main-button.play {
-  font-weight: bold;
-}
-
-.main-button.danger {
-  color: #ff4d4d;
-}
-
+@import "signup";
+@import "top_page";
 @import "flash_message";
+@import "word_kits";
+@import "game_play";
+@import "menu";
