FIX:未ログインの場合、ログインページへ

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
       <% if logged_in? %>
         <%= link_to 'ゲームキットを作る', new_word_kit_path, class: "main-button" %>
       <% else %>
-        <%= link_to 'ゲームキットを作る', login_path, class: "main-button" %>
+        <%= link_to 'ログインしてゲームキットを作る', login_path, class: "main-button" %>
       <% end %>
     </li>
 
