FIX:エラー時に入力フォームのUIが崩れる問題を修正

--- a/app/assets/stylesheets/word_kits.scss
+++ b/app/assets/stylesheets/word_kits.scss
@@ -391,3 +391,11 @@
 .edit-page-container .btn-link.btn-update span {
   color: white;
 }
+
+.field_with_errors {
+  display: contents;
+}
+
+.field_with_errors input {
+  border: 2px solid #e53e3e !important;
+}
